--- a/TimeScheduleMobileGroup11/app/src/main/res/layout/fragment_schedule.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/res/layout/fragment_schedule.xml
@@ -62,40 +62,40 @@
                     android:textSize="18sp" />
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="10dp"
-                android:background="@color/logo">
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:orientation="horizontal"-->
+<!--                android:padding="10dp"-->
+<!--                android:background="@color/logo">-->
 
-                <ImageButton
-                    android:id="@+id/btnBackDate"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:background="?attr/selectableItemBackgroundBorderless"
-                    android:src="@drawable/baseline_arrow_back_ios_new_24" />
-                <TextView
-                    android:id="@+id/txtDayMonthYear"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="10"
-                    android:layout_marginStart="10dp"
-                    android:padding="10dp"
-                    android:text="Từ 29/7/2024 đến 04/08/2024 "
-                    android:textColor="#FFFFFF"
-                    android:textSize="20sp" />
-                <ImageButton
-                    android:id="@+id/btnFollowDate"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:layout_gravity="center"
-                    android:background="?attr/selectableItemBackgroundBorderless"
-                    android:src="@drawable/baseline_arrow_forward_ios_24" />
-            </LinearLayout>
+<!--                <ImageButton-->
+<!--                    android:id="@+id/btnBackDate"-->
+<!--                    android:layout_width="0dp"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_gravity="center"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:background="?attr/selectableItemBackgroundBorderless"-->
+<!--                    android:src="@drawable/baseline_arrow_back_ios_new_24" />-->
+<!--                <TextView-->
+<!--                    android:id="@+id/txtDayMonthYear"-->
+<!--                    android:layout_width="0dp"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_weight="10"-->
+<!--                    android:layout_marginStart="10dp"-->
+<!--                    android:padding="10dp"-->
+<!--                    android:text="Từ 29/7/2024 đến 04/08/2024 "-->
+<!--                    android:textColor="#FFFFFF"-->
+<!--                    android:textSize="20sp" />-->
+<!--                <ImageButton-->
+<!--                    android:id="@+id/btnFollowDate"-->
+<!--                    android:layout_width="0dp"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:layout_gravity="center"-->
+<!--                    android:background="?attr/selectableItemBackgroundBorderless"-->
+<!--                    android:src="@drawable/baseline_arrow_forward_ios_24" />-->
+<!--            </LinearLayout>-->
 
         </LinearLayout>
         <ListView
