--- a/TimeScheduleMobileGroup11/app/src/main/res/layout/item_detail_event.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/res/layout/item_detail_event.xml
@@ -85,7 +85,7 @@
             android:textSize="22sp" />
 
         <EditText
-            android:id="@+id/etQuestion"
+            android:id="@+id/edtQuestion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
