--- a/TimeScheduleMobileGroup11/app/src/main/res/layout/fragment_event_schedule.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/res/layout/fragment_event_schedule.xml
@@ -5,37 +5,30 @@
     android:layout_height="match_parent"
     tools:context=".fragment.EventFragment">
 
-    <!-- Back Arrow and Title -->
+    <!-- TODO: Update blank fragment layout -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <LinearLayout
+        android:orientation="vertical"
+        >
+        <TextView
+            android:id="@+id/txtEventToBack"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="16dp"
-            android:background="@color/background">
-
-            <ImageView
-                android:id="@+id/btnBack"
-                android:layout_width="30dp"
-                android:layout_height="40dp"
-                android:src="@drawable/back_white_40" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="8dp"
-                android:text="Danh sách sự kiện"
-                android:textColor="#FFFFFF"
-                android:textSize="26sp" />
-        </LinearLayout>
+            android:text="@string/eventTitle"
+            android:textSize="30sp"
+            android:textColor="@color/white"
+            android:paddingLeft="14dp"
+            android:padding="10dp"
+            android:background="@color/background"/>
         <ListView
-            android:id="@+id/lvEvents"
+            android:id="@+id/lvEventsFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        </ListView>
+            android:layout_height="wrap_content"
+            android:padding="12dp"/>
     </LinearLayout>
+
+
+
 
 </FrameLayout>
