--- a/TimeScheduleMobileGroup11/app/src/main/res/layout/item_detail_event.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/res/layout/item_detail_event.xml
@@ -17,6 +17,7 @@
         android:background="@color/background">
 
         <ImageView
+            android:id="@+id/btnBack"
             android:layout_width="30dp"
             android:layout_height="40dp"
             android:src="@drawable/back_white_40" />
