--- a/TimeScheduleMobileGroup11/app/src/main/res/layout/activity_register.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/res/layout/activity_register.xml
@@ -147,6 +147,36 @@
             android:drawableLeft="@drawable/icons_schedule"
             android:drawablePadding="10dp"/>
 
+        <Spinner
+            android:id="@+id/spinner_classes"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/border_edittext"
+            android:padding="15dp"
+            android:textSize="24sp"
+            android:singleLine="true"
+            android:gravity="center"
+            />
+
+        <Spinner
+            android:id="@+id/spinner_roles"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/border_edittext"
+            android:padding="15dp"
+            android:textSize="24sp"
+            android:singleLine="true"
+            android:gravity="center"
+            />
+
 <!--        <EditText-->
 <!--            android:id="@+id/edtPassword"-->
 <!--            android:layout_width="match_parent"-->
