Done create account

--- a/TimeScheduleMobileGroup11/app/src/main/res/layout/activity_event.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/res/layout/activity_event.xml
@@ -28,7 +28,15 @@
             android:textStyle="bold"
             android:textSize="30dp"
             android:gravity="center"/>
+
+
     </LinearLayout>
+    <Button
+        android:id="@+id/btnAdd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add"
+        />
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
